--- a/sass/components/_blocks-meal.scss
+++ b/sass/components/_blocks-meal.scss
@@ -17,28 +17,26 @@
 			animation: meal-check-move 400ms 100ms ease-out forwards;
 		}
 	}
-	.meal-desc {
+	.flex-desc-price {
+		display: flex;
+		align-items: flex-end;
 		flex: 1;
-		margin-left: 0.65em;
-		white-space: nowrap;
-		text-overflow: ellipsis;
-		overflow: hidden;
-		.main-meal-name {
-			font-size: 1em;
+		padding: 0 1.5em 0 0.65em;
+		.meal-desc {
+			flex: 1;
+			.main-meal-name {
+				font-size: 1.1em;
+				font-weight: bold;
+				padding-bottom: 0.25em;
+			}
+			.sec-meal-name {
+				font-size: 0.95em;
+			}
+		}
+		.meal-price {
 			font-weight: bold;
-			padding-bottom: 0.25em;
+			text-align: center;
 		}
-		.sec-meal-name {
-			font-size: 0.95em;
-		}
-	}
-	.meal-price {
-		font-weight: bold;
-		text-align: center;
-		padding-top: 1.7em;
-		padding-right: 1em;
-		transform: translateX(65px);
-		transition: transform 500ms ease-out;
 	}
 	.meal-green-check {
 		display: flex;
@@ -49,8 +47,6 @@
 		padding: 0 1em;
 		color: $bg-colour-primary;
 		background-color: $colour-tertiary;
-		transform: translateX(65px);
-		transition: transform 500ms ease-out;
 	}
 }
 
